# ropgadget-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
examples/: rp-rs.rs
src/: common.rs  constants.rs  engine.rs  error.rs  gadget.rs  lib.rs  main.rs  section.rs  session.rs
src/cpu/: arm.rs  mod.rs  x64.rs  x86.rs
src/format/: elf.rs  mach.rs  mod.rs  pe.rs
tests/: Makefile
tests/src/: test1.c  test_x64.c
