[package]
name = "ropgadget-rs"
version = "0.4.0"
authors = ["hugsy <hugsy@blah.cat>"]
edition = "2018"
description = "Another (bad) ROP gadget finder"
homepage = "https://github.com/hugsy/ropgadget-rs/"
repository = "https://github.com/hugsy/ropgadget-rs/"
readme = "README.md"
license = "MIT"
keywords = [
    "pwn",
    "ctf",
    "ropgadget",
    "rop",
    "x64",
    "x86",
    "arm",
    "arm64",
    "pe",
    "elf",
    "macho",
]
include = ["/Cargo.toml", "/LICENSE", "README.md", "/src/**", "/examples/**"]

[dependencies]
log = { version = "0.4.11", features = ["std"] }
clap = { version = "4.0.29", features = ["derive"] }
colored = "2"
bitflags = "2.4.2"
capstone = "0.12.0"
goblin = "0.8.0"

[lib]
crate-type = ["dylib", "rlib"]

[[example]]
name = "rp-rs"
